@@ -17,18 +17,11 @@
  */
 package org.jackhuang.hmcl.ui.decorator;
 
-import com.jfoenix.controls.JFXDialog;
 import com.jfoenix.controls.JFXSnackbar;
+import com.jfoenix.controls.JFXSnackbarLayout;
 import javafx.animation.Interpolator;
-import javafx.animation.KeyFrame;
-import javafx.animation.KeyValue;
-import javafx.animation.Timeline;
-import javafx.application.Platform;
 import javafx.beans.InvalidationListener;
 import javafx.beans.WeakInvalidationListener;
-import javafx.beans.value.ChangeListener;
-import javafx.beans.value.ObservableValue;
-import javafx.event.EventHandler;
 import javafx.geometry.Insets;
 import javafx.scene.Node;
 import javafx.scene.image.Image;
@@ -41,35 +34,35 @@ import javafx.scene.paint.Color;
 import javafx.scene.paint.Paint;
 import javafx.stage.Stage;
 import javafx.util.Duration;
-import org.jackhuang.hmcl.Launcher;
 import org.jackhuang.hmcl.Metadata;
 import org.jackhuang.hmcl.auth.authlibinjector.AuthlibInjectorDnD;
 import org.jackhuang.hmcl.setting.EnumBackgroundImage;
 import org.jackhuang.hmcl.task.Schedulers;
 import org.jackhuang.hmcl.task.Task;
 import org.jackhuang.hmcl.ui.Controllers;
+import org.jackhuang.hmcl.ui.DialogUtils;
 import org.jackhuang.hmcl.ui.FXUtils;
 import org.jackhuang.hmcl.ui.account.AddAuthlibInjectorServerPane;
-import org.jackhuang.hmcl.ui.animation.*;
+import org.jackhuang.hmcl.ui.animation.ContainerAnimations;
+import org.jackhuang.hmcl.ui.animation.Motion;
 import org.jackhuang.hmcl.ui.animation.TransitionPane.AnimationProducer;
-import org.jackhuang.hmcl.ui.construct.DialogAware;
-import org.jackhuang.hmcl.ui.construct.DialogCloseEvent;
-import org.jackhuang.hmcl.ui.construct.Navigator;
 import org.jackhuang.hmcl.ui.construct.JFXDialogPane;
+import org.jackhuang.hmcl.ui.construct.Navigator;
 import org.jackhuang.hmcl.ui.wizard.Refreshable;
 import org.jackhuang.hmcl.ui.wizard.WizardProvider;
-import org.jackhuang.hmcl.util.Lang;
+import org.jackhuang.hmcl.util.MathUtils;
 import org.jackhuang.hmcl.util.platform.OperatingSystem;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Locale;
+import java.util.Random;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static java.util.stream.Collectors.toList;
 import static org.jackhuang.hmcl.setting.ConfigHolder.config;
 import static org.jackhuang.hmcl.ui.FXUtils.newBuiltinImage;
 import static org.jackhuang.hmcl.ui.FXUtils.onEscPressed;
@@ -77,38 +70,11 @@ import static org.jackhuang.hmcl.util.io.FileUtils.getExtension;
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
 public class DecoratorController {
-    private static final String PROPERTY_DIALOG_CLOSE_HANDLER = DecoratorController.class.getName() + ".dialog.closeListener";
-
     private final Decorator decorator;
     private final Navigator navigator;
 
-    private JFXDialog dialog;
-    private JFXDialogPane dialogPane;
-
     public DecoratorController(Stage stage, Node mainPage) {
         decorator = new Decorator(stage);
-        decorator.setOnCloseButtonAction(() -> {
-            if (AnimationUtils.playWindowAnimation()) {
-                Timeline timeline = new Timeline(
-                        new KeyFrame(Duration.millis(0),
-                                new KeyValue(decorator.opacityProperty(), 1, Motion.EASE),
-                                new KeyValue(decorator.scaleXProperty(), 1, Motion.EASE),
-                                new KeyValue(decorator.scaleYProperty(), 1, Motion.EASE),
-                                new KeyValue(decorator.scaleZProperty(), 0.3, Motion.EASE)
-                        ),
-                        new KeyFrame(Duration.millis(200),
-                                new KeyValue(decorator.opacityProperty(), 0, Motion.EASE),
-                                new KeyValue(decorator.scaleXProperty(), 0.8, Motion.EASE),
-                                new KeyValue(decorator.scaleYProperty(), 0.8, Motion.EASE),
-                                new KeyValue(decorator.scaleZProperty(), 0.8, Motion.EASE)
-                        )
-                );
-                timeline.setOnFinished(event -> Launcher.stopApplication());
-                timeline.play();
-            } else {
-                Launcher.stopApplication();
-            }
-        });
         decorator.titleTransparentProperty().bind(config().titleTransparentProperty());
 
         navigator = new Navigator();
@@ -134,19 +100,24 @@ public class DecoratorController {
 
         // pass key events to current dialog / current page
         decorator.addEventFilter(KeyEvent.ANY, e -> {
-            if (!(e.getTarget() instanceof Node)) {
-                return; // event source can't be determined
+            if (!(e.getTarget() instanceof Node t)) {
+                return;
             }
 
             Node newTarget;
-            if (dialogPane != null && dialogPane.peek().isPresent()) {
-                newTarget = dialogPane.peek().get(); // current dialog
-            } else {
-                newTarget = navigator.getCurrentPage(); // current page
+
+            JFXDialogPane currentDialogPane = null;
+            if (decorator.getDrawerWrapper() != null) {
+                currentDialogPane = (JFXDialogPane) decorator.getDrawerWrapper().getProperties().get(DialogUtils.PROPERTY_DIALOG_PANE_INSTANCE);
             }
 
+            if (currentDialogPane != null && currentDialogPane.peek().isPresent()) {
+                newTarget = currentDialogPane.peek().get();
+            } else {
+                newTarget = navigator.getCurrentPage();
+            }
             boolean needsRedirect = true;
-            Node t = (Node) e.getTarget();
+
             while (t != null) {
                 if (t == newTarget) {
                     // current event target is in newTarget
@@ -222,7 +193,10 @@ public class DecoratorController {
                 String backgroundImage = config().getBackgroundImage();
                 if (backgroundImage != null)
                     try {
-                        image = tryLoadImage(Paths.get(backgroundImage));
+                        Path path = Path.of(backgroundImage);
+                        image = Files.isDirectory(path)
+                                ? randomImageIn(path)
+                                : tryLoadImage(path);
                     } catch (Exception e) {
                         LOG.warning("Couldn't load background image", e);
                     }
@@ -244,7 +218,7 @@ public class DecoratorController {
                 return new Background(new BackgroundFill(new Color(1, 1, 1, 0.5), CornerRadii.EMPTY, Insets.EMPTY));
             case PAINT:
                 Paint paint = config().getBackgroundPaint();
-                double opacity = Lang.clamp(0, config().getBackgroundImageOpacity(), 100) / 100.;
+                double opacity = MathUtils.clamp(config().getBackgroundImageOpacity(), 0, 100) / 100.;
                 if (paint instanceof Color || paint == null) {
                     Color color = (Color) paint;
                     if (color == null)
@@ -266,7 +240,7 @@ public class DecoratorController {
     private Background createBackgroundWithOpacity(Image image, int opacity) {
         if (opacity <= 0) {
             return new Background(new BackgroundFill(new Color(1, 1, 1, 0), CornerRadii.EMPTY, Insets.EMPTY));
-        } else if (opacity >= 100) {
+        } else if (opacity >= 100 || image.getPixelReader() == null) {
             return new Background(new BackgroundImage(
                     image,
                     BackgroundRepeat.NO_REPEAT,
@@ -328,14 +302,14 @@ public class DecoratorController {
             return null;
         }
 
-        List<Path> candidates;
+        ArrayList<Path> candidates;
         try (Stream<Path> stream = Files.list(imageDir)) {
             candidates = stream
                     .filter(it -> FXUtils.IMAGE_EXTENSIONS.contains(getExtension(it).toLowerCase(Locale.ROOT)))
                     .filter(Files::isReadable)
-                    .collect(toList());
+                    .collect(Collectors.toCollection(ArrayList::new));
         } catch (IOException e) {
-            LOG.warning("Failed to list files in ./bg", e);
+            LOG.warning("Failed to list files in " + imageDir, e);
             return null;
         }
 
@@ -373,9 +347,8 @@ public class DecoratorController {
         if (navigator.getCurrentPage() instanceof DecoratorPage) {
             DecoratorPage page = (DecoratorPage) navigator.getCurrentPage();
 
-            // FIXME: Get WorldPage working first, and revisit this later
-            page.closePage();
             if (page.isPageCloseable()) {
+                page.closePage();
                 return;
             }
         }
@@ -446,87 +419,18 @@ public class DecoratorController {
     }
 
     // ==== Dialog ====
-
     public void showDialog(Node node) {
-        FXUtils.checkFxUserThread();
-
-        if (dialog == null) {
-            if (decorator.getDrawerWrapper() == null) {
-                // Sometimes showDialog will be invoked before decorator was initialized.
-                // Keep trying again.
-                Platform.runLater(() -> showDialog(node));
-                return;
-            }
-            dialog = new JFXDialog(AnimationUtils.isAnimationEnabled()
-                    ? JFXDialog.DialogTransition.CENTER
-                    : JFXDialog.DialogTransition.NONE);
-            dialogPane = new JFXDialogPane();
-
-            dialog.setContent(dialogPane);
-            decorator.capableDraggingWindow(dialog);
-            decorator.forbidDraggingWindow(dialogPane);
-            dialog.setDialogContainer(decorator.getDrawerWrapper());
-            dialog.setOverlayClose(false);
-            dialog.show();
-
-            navigator.setDisable(true);
-        }
-        dialogPane.push(node);
-
-        EventHandler<DialogCloseEvent> handler = event -> closeDialog(node);
-        node.getProperties().put(PROPERTY_DIALOG_CLOSE_HANDLER, handler);
-        node.addEventHandler(DialogCloseEvent.CLOSE, handler);
-
-        if (dialog.isVisible()) {
-            dialog.requestFocus();
-            if (node instanceof DialogAware)
-                ((DialogAware) node).onDialogShown();
-        } else {
-            dialog.visibleProperty().addListener(new ChangeListener<Boolean>() {
-                @Override
-                public void changed(ObservableValue<? extends Boolean> observable, Boolean oldValue, Boolean newValue) {
-                    if (newValue) {
-                        dialog.requestFocus();
-                        if (node instanceof DialogAware)
-                            ((DialogAware) node).onDialogShown();
-                        observable.removeListener(this);
-                    }
-                }
-            });
-        }
+        DialogUtils.show(decorator, node);
     }
 
-    @SuppressWarnings("unchecked")
     private void closeDialog(Node node) {
-        FXUtils.checkFxUserThread();
-
-        Optional.ofNullable(node.getProperties().get(PROPERTY_DIALOG_CLOSE_HANDLER))
-                .ifPresent(handler -> node.removeEventHandler(DialogCloseEvent.CLOSE, (EventHandler<DialogCloseEvent>) handler));
-
-        if (dialog != null) {
-            JFXDialogPane pane = dialogPane;
-
-            if (pane.size() == 1 && pane.peek().orElse(null) == node) {
-                dialog.setOnDialogClosed(e -> pane.pop(node));
-                dialog.close();
-                dialog = null;
-                dialogPane = null;
-
-                navigator.setDisable(false);
-            } else {
-                pane.pop(node);
-            }
-
-            if (node instanceof DialogAware) {
-                ((DialogAware) node).onDialogClosed();
-            }
-        }
+        DialogUtils.close(node);
     }
 
     // ==== Toast ====
 
     public void showToast(String content) {
-        decorator.getSnackbar().fireEvent(new JFXSnackbar.SnackbarEvent(content, null, 2000L, false, null));
+        decorator.getSnackbar().fireEvent(new JFXSnackbar.SnackbarEvent(new JFXSnackbarLayout(content)));
     }
 
     // ==== Wizard ====
